# secs_rust

./: .gitignore  BENCHMARK_PROMPT.md  Cargo.toml  LICENSE  README.md  TODO.md
benchmark/: TODO.md  data_generator.rs  gem_benchmark.rs  hsms_benchmark.rs  payload_gen.rs  plan.md  secs2_bench.rs  secs2_benchmark.rs
src/: lib.rs
src/gem/: communicator.rs  config.rs  gem_state.rs  manager.rs  message.rs  mod.rs  session.rs
src/gem/state/: comm_state.rs  control_state.rs  gem_state.rs  mod.rs
src/hsms/: communicator.rs  config.rs  manager.rs  message.rs  mod.rs  session.rs  stream_util.rs
src/secs2/: encoder.rs  mod.rs  parser.rs  types.rs
src/secs2/tests/: encoder_tests.rs  mod.rs  parser_tests.rs  reproduction.rs
src/sml/: error.rs  formatter.rs  mod.rs  parser.rs  tests.rs
src/util/: mod.rs  system_bytes.rs
tests/: gem_integration_test.rs  hsms_integration_test.rs
