[package]
name = "secs_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["sync", "net", "rt", "time", "macros"] }
tokio-util = { version = "0.7.17", features = ["codec"]}
futures = { version = "0.3"}
tracing = "0.1"
nom = "8.0.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
tracing-subscriber = "0.3.22"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "secs2_bench"
path = "benchmark/secs2_bench.rs"
harness = false
